testing/Travis/testcases/Check/ShouldFail/EnforceTest1.adl
CONTEXT EnforceTest1 IN DUTCH


--CLASSIFY NPForm, NPReg ISA NatuurlijkPersoon
--CLASSIFY NatuurlijkPersoon ISA Person
--CLASSIFY Voornaam ISA FirstName
REPRESENT FirstName TYPE ALPHANUMERIC

npRoepnaam[NatuurlijkPersoon*Voornaam] [UNI]
personFirstName[Person*FirstName]

ENFORCE personFirstName := I[NPReg];npRoepnaam

-- This test should fail, because the relation npRoepnaam[NPReg*???] is not defined.
ENDCONTEXT